# midas-rs

./: .gitignore  Cargo.toml  build.py  build.sh  pyproject.toml  rustfmt.toml
src/: lib.rs  product.rs  splitter.rs
test_data/: spxw.csv  test.parquet
